Fix collapsed menu items

--- a/src/scss/partials/_menu.scss
+++ b/src/scss/partials/_menu.scss
@@ -1,6 +1,6 @@
 %is-offcanvas {
-  margin-left: -8rem;
-  margin-right: 8rem;
+  margin-left: -10rem;
+  margin-right: 10rem;
 }
 
 // state of body when js event listener triggers
@@ -13,7 +13,7 @@
 .nav-menu {
   list-style-type: none;
   position: fixed;
-  right: -8rem;
+  right: -10rem;
   margin: 0;
   padding: 0;
   @include mq(ns) {
@@ -24,6 +24,7 @@
   &__item {
     display: block;
     margin: 1rem;
+    padding: 0.25rem 0;
     @include mq(ns) {
       display: inline-block;
       margin: 0 .5rem;
@@ -60,7 +61,7 @@
   &__open {
     position: fixed;
     right: 0;
-    width: 8rem;
+    width: 10rem;
     height: 100%;
     top: 0;
   }
